feat: add markdown presentation app with citation support and slide transitions

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -46,3 +46,10 @@
   year={2014},
   publisher={Routledge}
 }
+
+@article{vzivzek2020hegel,
+  title={Hegel in a wired brain},
+  author={{\v{Z}}i{\v{z}}ek, Slavoj},
+  year={2020},
+  publisher={Bloomsbury Publishing}
+}
