Gamified TODO features, 1st round

--- a/lectures/references.bib
+++ b/lectures/references.bib
@@ -50,6 +50,121 @@
   publisher={Routledge}
 }
 
+% === Productivity and Focus Research ===
+
+@article{deci2000intrinsic,
+  title={The "what" and "why" of goal pursuits: Human needs and the self-determination of behavior},
+  author={Deci, Edward L and Ryan, Richard M},
+  journal={Psychological inquiry},
+  volume={11},
+  number={4},
+  pages={227--268},
+  year={2000},
+  publisher={Taylor \& Francis},
+  note={Foundational research on intrinsic motivation - shows that autonomy, competence, and relatedness drive sustained engagement}
+}
+
+@article{mcgonigal2011reality,
+  title={Reality is broken: Why games make us better and how they can change the world},
+  author={McGonigal, Jane},
+  journal={Penguin Press},
+  year={2011},
+  note={Demonstrates how game mechanics can enhance motivation and engagement in real-world tasks}
+}
+
+@article{cirillo2006pomodoro,
+  title={The pomodoro technique},
+  author={Cirillo, Francesco},
+  journal={Agile Processes in Software Engineering and Extreme Programming},
+  year={2006},
+  note={Time-boxing technique that improves focus by breaking work into intervals with breaks}
+}
+
+@article{clear2018atomic,
+  title={Atomic habits: An easy \& proven way to build good habits \& break bad ones},
+  author={Clear, James},
+  year={2018},
+  publisher={Avery},
+  note={Research-backed approach to habit formation through small, consistent actions and environmental design}
+}
+
+@article{fogg2019tiny,
+  title={Tiny habits: The small changes that change everything},
+  author={Fogg, BJ},
+  year={2019},
+  publisher={Houghton Mifflin Harcourt},
+  note={Behavioral psychology research showing how minimal viable habits create sustainable change}
+}
+
+@article{kapp2012gamification,
+  title={The gamification of learning and instruction: game-based methods and strategies for training and education},
+  author={Kapp, Karl M},
+  year={2012},
+  publisher={John Wiley \& Sons},
+  note={Comprehensive analysis of how game elements enhance learning and sustained engagement}
+}
+
+@article{deterding2011gamification,
+  title={From game design elements to gamefulness: defining gamification},
+  author={Deterding, Sebastian and Dixon, Dan and Khaled, Rilla and Nacke, Lennart},
+  journal={Proceedings of the 15th international academic MindTrek conference: Envisioning future media environments},
+  pages={9--15},
+  year={2011},
+  note={Foundational definition and framework for applying game mechanics to non-game contexts}
+}
+
+@article{duckworth2007grit,
+  title={Grit: perseverance and passion for long-term goals},
+  author={Duckworth, Angela L and Peterson, Christopher and Matthews, Michael D and Kelly, Dennis R},
+  journal={Journal of personality and social psychology},
+  volume={92},
+  number={6},
+  pages={1087},
+  year={2007},
+  publisher={American Psychological Association},
+  note={Research showing that sustained effort and interest in long-term goals predicts achievement better than talent}
+}
+
+@article{csikszentmihalyi1990flow,
+  title={Flow: The psychology of optimal experience},
+  author={Csikszentmihalyi, Mihaly},
+  year={1990},
+  publisher={Harper \& Row},
+  note={Foundational research on flow states - conditions that create deep engagement and intrinsic motivation}
+}
+
+@article{steel2007procrastination,
+  title={The nature of procrastination: a meta-analytic and theoretical review of quintessential self-regulatory failure},
+  author={Steel, Piers},
+  journal={Psychological bulletin},
+  volume={133},
+  number={1},
+  pages={65},
+  year={2007},
+  publisher={American Psychological Association},
+  note={Comprehensive meta-analysis identifying temporal discounting and task aversiveness as key procrastination factors}
+}
+
+@article{bandura1991social,
+  title={Social cognitive theory of self-regulation},
+  author={Bandura, Albert},
+  journal={Organizational behavior and human decision processes},
+  volume={50},
+  number={2},
+  pages={248--287},
+  year={1991},
+  publisher={Elsevier},
+  note={Self-efficacy and goal-setting theory - shows how progress tracking and small wins build sustained motivation}
+}
+
+@article{amabile2011progress,
+  title={The progress principle: Using small wins to ignite joy, engagement, and creativity at work},
+  author={Amabile, Teresa and Kramer, Steven},
+  year={2011},
+  publisher={Harvard Business Review Press},
+  note={Research showing that incremental progress is the strongest predictor of positive emotions and sustained engagement}
+}
+
 @article{vzivzek2020hegel,
   title={Hegel in a wired brain},
   author={{\v{Z}}i{\v{z}}ek, Slavoj},
