--- a/citations.bib
+++ b/citations.bib
@@ -1,9 +1,8 @@
-@article{Karpathy2025LLMs,
-  title = {How I use LLMs},
-  author = {Andrej Karpathy},
-  year = {2025},
-  url = {https://www.youtube.com/watch?v=EWvNQjAaOHw},
-  abstract = {The example-driven, practical walkthrough of Large Language Models and their growing list of related features, as a new entry to my general audi}
+@misc{TwitterPage,
+  title = {Web Page},
+  author = {X (formerly Twitter)},
+  journal = {X (formerly Twitter)},
+  url = {https://x.com/ash_at_tt/status/1977376958859092250}
 }
 
 @article{Preprint,
@@ -18,6 +17,36 @@
   doi = {10.48550/arXiv.2507.21928},
   url = {http://arxiv.org/abs/2507.21928},
   abstract = {Software development is undergoing a fundamental transformation as vibe coding becomes widespread, with large portions of contemporary codebases now being AI-generated. The disconnect between rapid adoption and limited conceptual understanding highlights the need for an inquiry into this emerging paradigm. Drawing on an intent perspective and historical analysis, we define vibe coding as a software development paradigm where humans and generative AI engage in collaborative flow to co-create software artifacts through natural language dialogue, shifting the mediation of developer intent from deterministic instruction to probabilistic inference. By intent mediation, we refer to the fundamental process through which developers translate their conceptual goals into representations that computational systems can execute. Our results show that vibe coding reconfigures cognitive work by redistributing epistemic labor between humans and machines, shifting the expertise in the software development process away from traditional areas such as design or technical implementation toward collaborative orchestration. We identify key opportunities, including democratization, acceleration, and systemic leverage, alongside risks, such as black box codebases, responsibility gaps, and ecosystem bias. We conclude with a research agenda spanning human-, technology-, and organization-centered directions to guide future investigations of this paradigm.}
+}
+
+@article{2025LLMs,
+  title = {How I use LLMs},
+  year = {2025},
+  url = {https://www.youtube.com/watch?v=EWvNQjAaOHw},
+  abstract = {The example-driven, practical walkthrough of Large Language Models and their growing list of related features, as a new entry to my general audi}
+}
+
+@article{Gaines2025Researchcurriculum,
+  title = {Research, curriculum and grading: new data sheds light on how professors are using AI},
+  author = {Lee V. Gaines},
+  year = {2025},
+  journal = {NPR},
+  url = {https://www.npr.org/2025/10/02/nx-s1-5550365/college-professors-ai-classroom},
+  abstract = {It's not just students, more professors are using AI in the classroom. But they say more guidance is needed on how to use the technology.}
+}
+
+@misc{GullettFromVibe,
+  title = {(7) From "Vibe Coding" to "Vibe Research" | LinkedIn},
+  author = {Matt Gullett},
+  url = {https://www.linkedin.com/pulse/from-vibe-coding-research-matt-gullett-ecmqe/}
+}
+
+@article{Bertina2025VibeResearchinstead,
+  title = {Vibe-Research instead of Deep-Research: AI Agents and the Future of Scientific Discovery},
+  author = {Abas Bertina},
+  year = {2025},
+  url = {https://medium.com/@abertina/vibe-research-instead-of-deep-research-ai-agents-and-the-future-of-scientific-discovery-4d561248f3e2},
+  abstract = {Abbas Bertina — Dept. of Artificial Intelligence, Bertix AI}
 }
 
 @article{Radford2018Improvinglanguage,
